bundled_metadata/force-app/main/default/objects/IDM_Provisioning_Request__c/IDM_Provisioning_Request__c.object-meta.xml
<CustomObject>
    <label>IDM Provisioning Request</label>
    <nameField>
        <label>IDM Provisioning Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDM Provisioning Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>