bundled_metadata/force-app/main/default/objects/IDM_Provisioning_Request__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>Business Justification</label>
    <type>TextArea</type>
</CustomField>