bundled_metadata/force-app/main/default/objects/IDM_Provisioning_Request__c/fields/IDM_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>IDM_Request_Number__c</fullName>
    <label>IDM Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>