bundled_metadata/force-app/main/default/objects/IDM_Provisioning_Request__c/fields/Market_Channel_Persona__c.field-meta.xml
<CustomField>
    <fullName>Market_Channel_Persona__c</fullName>
    <label>Market Channel Persona</label>
    <type>TextArea</type>
</CustomField>