bundled_metadata/force-app/main/default/objects/IDM_Provisioning_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>